      \item the function `isofind()` gains an argument `neglect_covPredCalib` that allows for the computation of a covariance term that was so far neglected in IsoriX. See `?isofind` for details. (#143)
      \item new internal function `.invert_reg()` to invert regression (used for method "desk_inverse" in `calibfit()`)
      }
  }
  \subsection{Minor change}{
    \itemize{
      \item when calling `plot()` on an object created with `calibfit()`, the plotting function now returns the fitted values and CI for users to be able to make alternative plots (#44)
      \item new argument `xlim` for the plotting function for calibration fits
      \item new argument `line` for customising how to plot the regression line in calibration fits
      \item the summary method for calibration fits now displays the residual variance
      \item `calibfit()` performs more check on extrapolation (#119)
      \item when using `plot()` on an object of class ISOFIT, the x-axis for the plot showing the Matern correlation should have a range more adequate irrespective when autocorrelation is strong over short distances (#134)
      \item documentation for `?plot()` now contains a description of what symbols mean in plots (#138)
      \item when calling `plot()` on an object created with `isofind()`, the plotting function now detects sample of size 1 and no longer displays "Group" in the title of the assignment plot even if `who` = "group" (#120)
      \item all functions accepting a `data.frame` as input should also now be compatible when provided with a `tibble` (#118)
      \item typos have been corrected (#130)
      \item default y-axis title changed to "Isotopic value in the environment" when plotting calibration fits to be flexible enough irrespective of the methods used in `calibfit()`
      }
  }
  \subsection{Geeky change}{
    \itemize{